--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+streamlit==1.38.0
 youtube-comment-downloader==0.1.68
 transformers==4.42.4
 pandas==2.2.2
@@ -5,4 +6,4 @@ matplotlib==3.9.2
 wordcloud==1.9.3
 nltk==3.9.1
 openpyxl==3.1.5
-torch==2.4.0
+torch==2.4.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
