--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ matplotlib==3.9.2
 wordcloud==1.9.3
 nltk==3.9.1
 openpyxl==3.1.5
-torch==2.4.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+torch
