--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ nltk>=3.8.1
 youtube-comment-downloader>=0.1.76
 transformers>=4.41.2
 torch>=2.2.0
-sentencepiece==0.2.0 protobuf
+sentencepiece==0.2.0 
+protobuf
