--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-matplotlib
-wordcloud
-nltk
-youtube-comment-downloader
-transformers
-torch
-sentencepiece 
+streamlit>=1.37.0
+pandas>=2.2.1
+matplotlib>=3.9.0
+wordcloud>=1.9.3
+nltk>=3.8.1
+youtube-comment-downloader>=0.1.76
+transformers>=4.41.2
+torch>=2.2.0
+sentencepiece==0.2.0 
 protobuf
